fix: text overflow

--- a/src/components/common/Modal/components/CommentsModal/components/CommentsListItem/CommentsListItem.module.scss
+++ b/src/components/common/Modal/components/CommentsModal/components/CommentsListItem/CommentsListItem.module.scss
@@ -1,6 +1,10 @@
 @use "styles/colors" as *;
 
 .commentListItem {
+    h6 {
+        word-wrap: break-word;
+    }
+    
     p {
         &::first-letter {
             color: $gold-color;
